[gd_scene load_steps=9 format=2]

[ext_resource path="res://Boss1.gd" type="Script" id=1]
[ext_resource path="res://Assets/Boss/boss_icon.png" type="Texture" id=2]
[ext_resource path="res://Engine/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Engine/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Engine/Stats.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.0107, 31.8567 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.5713, 31.6759 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.0165, 30.8438 )

[node name="Boss1" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Timer_parar" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Timer_andar" type="Timer" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
MaxHealth = 5
[connection signal="timeout" from="Timer_parar" to="." method="_on_Timer_parar_timeout"]
[connection signal="timeout" from="Timer_andar" to="." method="_on_Timer_andar_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]

[editable path="Hitbox"]
